--- a/src/tailwind/critical.scss
+++ b/src/tailwind/critical.scss
@@ -7,7 +7,7 @@
 
 @layer base {
   html {
-    @apply font-mono text-xl text-base-content bg-base-100 antialiased;
+    @apply font-mono text-xl text-base-content bg-base-100 antialiased overflow-x-hidden;
   }
   body {
     @apply container mx-auto px-4 sm:px-4 md:px-8 lg:px-10 md:max-w-screen-md lg:max-w-screen-lg xl:max-w-screen-xl 2xl:max-w-screen-2xl;
