--- a/src/site/_includes/call-to-action.html
+++ b/src/site/_includes/call-to-action.html
@@ -2,7 +2,7 @@
     {% if cta.custom %}
         <h2 id="ctaLabel">{{cta.headline}}</h2>
         <p class="prose">{{ cta.intro | markdown | safe }}</p>
-        <a href="/contact">Contact me</a>
+        <a class="font-semibold" href="/contact">Contact me</a>
     {% elif tags.includes('theses') %}
         <h2 id="ctaLabel">Interested in writing a thesis?</h2>
         <p>If you are interested in doing thesis research with me, that's great! Let's talk about:</p>
@@ -11,10 +11,10 @@
             <li>Your scientific interests</li>
             <li>Available thesis topics</li>
         </ul>
-        <a href="/contact">Contact me</a>
+        <a class="font-semibold" href="/contact">Contact me</a>
     {% else %}
         <h2 id="ctaLabel">Academic work is team work</h2>
         <p>If you'd like to get together, share ideas or collaborate, I’d love to hear from you.</p>
-        <a href="/contact">Contact me</a>
+        <a class="font-semibold" href="/contact">Contact me</a>
     {% endif %}
 </section>
