--- a/src/site/_includes/more-posts.html
+++ b/src/site/_includes/more-posts.html
@@ -32,7 +32,7 @@
 <section aria-labelledby="further-reading-heading" class="teaser">
     <h2 id="further-reading-heading">More {{ typeOfThing }}</h2>
     <p>Here are a couple more {{ typeOfThing }} for you to enjoy. If that’s not enough, have a look at <a href="{{ linkToList }}">the full list</a>.</p>
-    <ol class="hfeed index-list" reversed>
+    <ol class="list-none" reversed>
         {%- for post in items | reverse | removeCurrent(title) | promoteRelated(related) | limit(2) %}
             {% include "post-in-list.html" %}
         {%- endfor %}
