--- a/src/tailwind/critical.scss
+++ b/src/tailwind/critical.scss
@@ -58,6 +58,7 @@
 
 @layer base {
   main {
-    @apply prose prose-sm md:prose-base lg:prose-lg xl:prose-xl 2xl:prose-2xl prose-a:link prose-a:link-primary;
+    @apply prose prose-sm md:prose-base lg:prose-lg xl:prose-xl 2xl:prose-2xl;
+    @apply prose-a:link prose-a:link-primary;
   }
 }
