--- a/src/site/_includes/post-menu.html
+++ b/src/site/_includes/post-menu.html
@@ -10,7 +10,7 @@
             <div class="flex justify-center md:justify-start">
                 <nav
                     role="tablist"
-                    class="lg:max-w-5xl md:space-y-0 md:space-x-2 flex flex-wrap md:flex-nowrap md:flex-row justify-center ring-1 ring-base-content/10 bg-base-100 rounded-xl md:rounded-full p-1"
+                    class="lg:max-w-5xl md:space-y-0 md:space-x-2 flex flex-wrap md:flex-nowrap md:flex-row justify-center ring-1 ring-base-300 bg-base-100 rounded-xl md:rounded-full p-1"
                 >
 
                 {% for item in menu %}
