--- a/src/site/_layouts/home.html
+++ b/src/site/_layouts/home.html
@@ -4,11 +4,11 @@ layout: base.html
 
 
 
-<div class= "flex flex-row items-center">
+<div class= "flex gap-x-10 flex-row-reverse items-center">
 <picture class="p-8">
     <img class= "w-full h-full mask mask-squircle motion-safe:hover:animate-spin object-cover" src="/assets/img/sarah-lindner--square-512x512.jpg" alt="Sarah Lindner of {{site.title}} smiling."/>
 </picture>
-<article>
+<article class="w-3/4">
     <h1>
         {%- if heading %}
             {{- heading | smart | safe }}
