--- a/src/site/_includes/head.html
+++ b/src/site/_includes/head.html
@@ -92,6 +92,10 @@
     <meta name="twitter:image" content="{{ cardImage }}" />
     <meta name="twitter:image:alt" content="{{ imageAlt }}" />
 
+    <meta itemprop="name" content="{{ pageTitle}}">
+    <meta itemprop="description" content="{{ description }}">
+    <meta itemprop="image" content="{{ cardImage }}">
+
     <meta name="viewport" content="initial-scale=1, width=device-width, viewport-fit=cover" />
     <meta name="disabled-adaptations" content="watch" />
     <meta name="format-detection" content="telephone=no" />
