--- a/src/site/_layouts/home.html
+++ b/src/site/_layouts/home.html
@@ -4,11 +4,11 @@ layout: base.html
 
 
 
-<div class= "flex gap-x-10 flex-row-reverse items-center">
+<div class= "flex flex-col sm:flex-row-reverse gap-x-10  items-center">
 <picture class="p-8">
-    <img class= "w-full h-full mask mask-squircle motion-safe:hover:animate-spin object-cover" src="/assets/img/sarah-lindner--square-512x512.jpg" alt="Sarah Lindner of {{site.title}} smiling."/>
+    <img class= "w-full mask mask-squircle motion-safe:hover:animate-spin object-cover" src="/assets/img/sarah-lindner--square-512x512.jpg" alt="Sarah Lindner of {{site.title}} smiling."/>
 </picture>
-<article class="w-3/4">
+<article class="w-full sm:w-3/4">
     <h1>
         {%- if heading %}
             {{- heading | smart | safe }}
