Fixed logos and updated nav and footer layouts.

--- a/src/site/_includes/footer.html
+++ b/src/site/_includes/footer.html
@@ -1,7 +1,5 @@
     <footer>
-        <a href="/" class="logo">
-            {{site.title}}
-        </a>
+        {%- include "logo.html" -%}
         <nav aria-label="repeated primary">
             {% include "navigation-primary.html" %}
         </nav>
