--- a/src/site/_includes/header.html
+++ b/src/site/_includes/header.html
@@ -1,8 +1,7 @@
 <header class="header">
-    <a href="/" class="logo">
-        {{site.title}}
-    </a>
+    {%- include "logo.html" -%}
     <nav aria-label="primary">
         {% include "navigation-primary.html" %}
     </nav>
 </header>
+
