--- a/src/tailwind/critical.scss
+++ b/src/tailwind/critical.scss
@@ -17,7 +17,7 @@
 @layer base {
   header {
     @apply font-bold leading-6 text-sm sm:text-base ;
-    @apply flex flex-col gap-y-4 md:flex-row justify-between py-2 sm:py-4 md:py-8 lg:py-10;
+    @apply flex flex-col gap-y-4 lg:flex-row justify-between lg:items-center mt-10 sm:mt-10 md:mt-10 lg:mt-10;
 
     .logo {
       @apply link link-primary link-hover;
