Repaired small layout issue.

--- a/src/site/_layouts/home.html
+++ b/src/site/_layouts/home.html
@@ -4,9 +4,9 @@ layout: base.html
 
 
 
-<div class= "flex flex-col sm:flex-row-reverse gap-x-10  items-center sm:mt-8 md:mt-10 lg:mt-16 xl:mt-20">
-<picture class="md:p-4 lg:p-8 xl:p-16">
-    <img class= "w-32 md:w-48 lg:w-56 xl:w-72 mask mask-squircle motion-safe:hover:animate-spin object-cover" src="/assets/img/sarah-lindner--square-512x512.jpg" alt="Sarah Lindner of {{site.title}} smiling."/>
+<div class= "flex flex-col sm:flex-row-reverse gap-x-10  items-center">
+<picture class="md:px-4 lg:px-8 xl:px-16">
+    <img class="w-32 sm:w-32 md:w-48 lg:w-56 xl:w-72 mask mask-squircle motion-safe:hover:animate-spin object-cover" src="/assets/img/sarah-lindner--square-512x512.jpg" alt="Sarah Lindner of {{site.title}} smiling."/>
 </picture>
 <article class="w-full sm:w-3/4">
     <h1>
