--- a/src/site/_includes/head.html
+++ b/src/site/_includes/head.html
@@ -113,7 +113,8 @@
     <link rel="preload" href="/assets/fonts/FSMeWeb-Italic.woff2" as="font" type="font/woff2" crossorigin />
 
     <!-- Include bundled styles and scripts. Tailwind is included here. -->
-    <link rel="stylesheet" href="{{ site.baseUrl }}assets/main.bundle.css">
+    <link rel="stylesheet" href="/assets/main.bundle.css">
+    <script src="/assets/main.bundle.js"></script>
 
     <!-- Alpine JS -->
     <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.13.0/dist/cdn.min.js"></script>
