--- a/src/tailwind/critical.scss
+++ b/src/tailwind/critical.scss
@@ -1,4 +1,9 @@
-@import url('https://cdn.jsdelivr.net/npm/prism-themes@1.5.0/themes/prism-material-light.css');
+
+//Import css for light theme syntax highlighting by default.
+@import url('https://cdn.jsdelivr.net/npm/prism-themes@1.5.0/themes/prism-material-light.css') screen;
+//If user OS has dark mode on, overwrite light css with dark css.
+@import url('https://cdn.jsdelivr.net/npm/prism-themes@1.5.0/themes/prism-material-dark.css') screen and (prefers-color-scheme: dark);;
+
 
 @tailwind base;
 @tailwind components;
