--- a/src/site/_layouts/base.html
+++ b/src/site/_layouts/base.html
@@ -3,23 +3,17 @@
     {% include "head.html" %}
     <body>
         <div class="wrapper">
-            <!-- <a href="#main" tabindex="0" class="skip-to-content">Skip to main content</a> -->
+            <a href="#main" class="link link-accent text-2xl sr-only focus:not-sr-only">Skip to main content</a>
             {% include "header.html" %}
             <main id="main" tabindex="-1">
                 {{ content | safe }}
                 {% if cta %}
                     {% include "call-to-action.html" %}
                 {% endif %}
-  </main>
+            </main>
             {% include "footer.html" %}
             <script>{% include "scripts.js" %}</script>
             <style>
-              @supports (color-scheme: dark light) {
-                @media screen and (prefers-color-scheme: dark) {
-                  :where(a:link) {color: #9e9eff;}
-                  :where(a:visited) {color: #d0adf0;}
-                }
-              }
             </style>
         </div>
     </body>
