Added various images for social cards and other purposes.

--- a/src/site/_includes/head.html
+++ b/src/site/_includes/head.html
@@ -60,7 +60,7 @@
     {%- else %}
         {%- set cardType = "summary" %}
         {%- set cardImage = site.url + "/assets/img/summary.png" %}
-        {%- set imageAlt = "Sarah's Science logo: a red laserbeam with a flare at the very right." %}
+        {%- set imageAlt = "Sarah's Science written as text with a stylized laser beam flare on it's right side." %}
         {%- set imageWidth = 512 %}
         {%- set imageHeight = 512 %}
     {%- endif %}
