--- a/src/site/_includes/logo.html
+++ b/src/site/_includes/logo.html
@@ -2,7 +2,7 @@
     <a href="/" class="logo tracking-tight font-extrabold text-3xl whitespace-nowrap">
         {{site.title}}
     </a>
-    <div class="w-10 motion-safe:animate-pulse">
+    <div class="w-10 ">
         {%- include "svg/laser.svg" -%}
     </div>
 </div>
