--- a/src/tailwind/critical.scss
+++ b/src/tailwind/critical.scss
@@ -20,7 +20,9 @@
 @layer base {
   header {
     @apply font-bold leading-6 text-sm sm:text-base ;
-    @apply flex flex-col gap-y-4 lg:flex-row justify-between lg:items-center my-6 sm:my-8 md:my-10 lg:my-16 xl:my-20;
+    @apply flex flex-col gap-y-4 lg:flex-row justify-between lg:items-center;
+    @apply mt-6 sm:mt-8 md:mt-8 lg:mt-8 xl:mt-8;
+    @apply mb-6 sm:mb-8 md:mb-10 lg:mb-16 xl:mb-20;
 
     .logo {
       @apply link link-primary link-hover;
