Cleaned up other ressources.

--- a/src/site/_includes/post-in-list.html
+++ b/src/site/_includes/post-in-list.html
@@ -87,7 +87,7 @@
 
         {% else %}
             <p class="details">
-                posted {{ post.data.date | date }}
+                published {{ post.data.date | date }}
                 {% include "post-categories.html" %}
             </p>
         {% endif -%}
