--- a/src/site/_layouts/publication.html
+++ b/src/site/_layouts/publication.html
@@ -6,7 +6,7 @@ layout: base.html
     <h1 itemprop="title headline">{{ title | smart | safe }}</h1>
     <section aria-label="Post details" class="post-details">
         <p>
-            {% if updated %}First posted {% else %}Posted {% endif %} <span class="entry-published date" itemprop="dateCreated pubdate datePublished" content="{{ date | isoDate }}" >{{ date | date }}</span>
+            {% if updated %}First published {% else %}published {% endif %} <span class="entry-published date" itemprop="dateCreated pubdate datePublished" content="{{ date | isoDate }}" >{{ date | date }}</span>
             <meta itemprop="author" content="{{ site.author.name }}" />
             <meta itemprop="publisher" itemscope itemtype="https://schema.org/Corporation" content="{{ site.company }}" />
             <meta itemprop="image" content="{{ site.url + "/assets/img/summary_large_image.png" }}" />
