Fixed edit page links.

--- a/src/site/_includes/footer.html
+++ b/src/site/_includes/footer.html
@@ -10,7 +10,7 @@
             <ul>
                 <li><a href="/privacy-policy">Privacy</a></li>
                 <li><a href="/accessibility-statement">Accessibility</a></li>
-                <li><a href="{{site.repo}}/blob/master/{{ page.inputPath }}">Edit page</a></li>
+                <li><a href="{{site.repo}}/blob/main/{{ page.inputPath }}">Edit page</a></li>
             </ul>
         </nav>
     </footer>
