--- a/src/site/_layouts/home.html
+++ b/src/site/_layouts/home.html
@@ -30,8 +30,8 @@ layout: base.html
     <h2 id="my-research-focus">Areas of Interest</h2>
     <p>There are a few topics that my work centers around:</p>
     <ul>
-        <li><a class="font-semibold" href="/category/single-photon-sources">Single Photon Sources</a> is about quantum emitters emitting single photons.</li>
-        <li><a class="font-semibold" href="/category/quantum-materials">Quantum Materials</a> is about the crazy stuff that happens on small scales.</li>
+        <li><a class="font-semibold" href="/category/single-photon-sources">Single Photon Sources</a> and their unique ability to emit singleton photons.</li>
+        <li>Special optical properties of <a class="font-semibold" href="/categories/silicon-vacancy-centers">Silicon</a> and <a class="font-semibold" href="/category/nitrogen-vacancy-center">Nitrogen</a> color centers in <a class="font-semibold" href="/category/nano-diamonds">nano diamonds.</a></li>
     </ul>
      <p>Have a look at the <a href="/categories">full list of subjects</a> I care about.</p>
 </section>
