--- a/src/site/_layouts/home.html
+++ b/src/site/_layouts/home.html
@@ -31,7 +31,7 @@ layout: base.html
     <p>There are a few topics that my work centers around:</p>
     <ul>
         <li><a class="font-semibold" href="/category/single-photon-sources">Single Photon Sources</a> and their unique ability to emit singleton photons.</li>
-        <li>Special optical properties of <a class="font-semibold" href="/categories/silicon-vacancy-centers">Silicon</a> and <a class="font-semibold" href="/category/nitrogen-vacancy-center">Nitrogen</a> color centers in <a class="font-semibold" href="/category/nano-diamonds">nano diamonds.</a></li>
+        <li>Special optical properties of <a class="font-semibold" href="/categories/silicon-vacancy-centers">Silicon</a> and <a class="font-semibold" href="/category/nitrogen-vacancy-center">Nitrogen</a> color centers in <a class="font-semibold" href="/category/nano-diamonds">nano-diamonds.</a></li>
     </ul>
      <p>Have a look at the <a href="/categories">full list of subjects</a> I care about.</p>
 </section>
