Purged unused classes.

--- a/src/site/_includes/more-posts.html
+++ b/src/site/_includes/more-posts.html
@@ -29,7 +29,7 @@
     {%- set linkToList = '/dissemination/' %}
     {%- set items = collections['dissemination'] %}
 {%- endif %}
-<section aria-labelledby="further-reading-heading" class="teaser">
+<section aria-labelledby="further-reading-heading">
     <h2 id="further-reading-heading">More {{ typeOfThing }}</h2>
     <p>Here are a couple more {{ typeOfThing }} for you to enjoy. If that’s not enough, have a look at <a href="{{ linkToList }}">the full list</a>.</p>
     <ol class="list-none" reversed>
