--- a/src/site/_layouts/home.html
+++ b/src/site/_layouts/home.html
@@ -37,7 +37,7 @@ layout: base.html
 </section>
 
 
-<section aria-labelledby="writing" class="teaser">
+<section aria-labelledby="writing">
     <h2 id="writing">Selected Publications</h2>
     <p>If you prefer to dive straight in rather than <a href="/publications/">see the full publication list</a>, here are a couple of my favourite publications to get you started:</p>
     <ul class="list-none" reversed>
