--- a/src/site/_includes/call-to-action.html
+++ b/src/site/_includes/call-to-action.html
@@ -1,7 +1,7 @@
-<section aria-labelledby="ctaLabel" class="call-to-action">
+<section aria-labelledby="ctaLabel">
     {% if cta.custom %}
         <h2 id="ctaLabel">{{cta.headline}}</h2>
-        <p class="prose">{{ cta.intro | markdown | safe }}</p>
+        <p>{{ cta.intro | markdown | safe }}</p>
         <a class="font-semibold" href="/contact">Contact me</a>
     {% elif tags.includes('theses') %}
         <h2 id="ctaLabel">Interested in writing a thesis?</h2>
