--- a/src/site/_includes/header.html
+++ b/src/site/_includes/header.html
@@ -1,4 +1,4 @@
-<header class="header">
+<header>
     {%- include "logo.html" -%}
     <nav aria-label="primary">
         {% include "navigation-primary.html" %}
