Fixed skip link styling.

--- a/src/site/_layouts/base.html
+++ b/src/site/_layouts/base.html
@@ -2,7 +2,7 @@
 <html lang="en">
     {% include "head.html" %}
     <body>
-            <a href="#main" class="link link-accent text-2xl sr-only focus:not-sr-only">Skip to main content</a>
+            <a href="#main" class="link link-secondary text-3xl font-bold sr-only focus:not-sr-only">Skip to main content</a>
             {% include "header.html" %}
             <main id="main" tabindex="-1">
                 {{ content | safe }}
