--- a/src/site/_includes/head.html
+++ b/src/site/_includes/head.html
@@ -121,6 +121,9 @@
     <!-- Alpine JS -->
     <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.13.0/dist/cdn.min.js"></script>
 
+    <!-- Carbon Tracker -->
+    <script src="https://unpkg.com/website-carbon-badges@1.1.3/b.min.js" defer></script>
+
     <script type="application/ld+json">
         {
             "@context" : "https://schema.org",
