--- a/src/tailwind/critical.scss
+++ b/src/tailwind/critical.scss
@@ -39,11 +39,9 @@
 
   footer {
     @apply font-semibold leading-6 text-sm;
-    @apply flex justify-between py-10 sm:py-12 md:py-16 lg:py-20;
-    @apply grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-y-4 sm:gap-y-6 md:gap-y-8 items-start;
 
     .logo {
-      @apply link link-primary link-hover col-span-full;
+      @apply link link-primary link-hover;
     }
   }
 
