--- a/src/site/_includes/footer.html
+++ b/src/site/_includes/footer.html
@@ -1,7 +1,9 @@
     <footer class="flex flex-col gap-10 m-6 sm:m-8 md:m-10 lg:m-12 xl:m-14">
         <div class="flex flex-col justify-items-start sm:flex-row sm:justify-between sm:items-baseline gap-6">
             {%- include "logo.html" -%}
-            <div id="wcb" class="carbonbadge wcb-d flex flex-row whitespace-nowrap self-center"></div>
+            <!-- Carbon Tracker -->
+            <div id="wcb" class="carbonbadge wcb flex flex-row whitespace-nowrap self-center" style=""></div>
+            <script src="/assets/js/carbonBadge.js" defer></script>
         </div>
         <div class="flex flex-col sm:flex-row justify-evenly items-start gap-4">
             <nav aria-label="repeated primary">
