--- a/src/site/_includes/footer.html
+++ b/src/site/_includes/footer.html
@@ -2,7 +2,7 @@
         <div class="flex flex-col justify-items-start sm:flex-row sm:justify-between sm:items-baseline gap-6">
             {%- include "logo.html" -%}
             <!-- Carbon Tracker -->
-            <div id="wcb" class="carbonbadge wcb flex flex-row whitespace-nowrap self-center" style=""></div>
+            <div id="wcb" class="carbonbadge wcb" style=""></div>
             <script src="/assets/js/carbonBadge.js" defer></script>
         </div>
         <div class="flex flex-col sm:flex-row justify-evenly items-start gap-4">
