Optimized execution order of js.

--- a/src/site/_layouts/base.html
+++ b/src/site/_layouts/base.html
@@ -11,7 +11,10 @@
                 {% endif %}
             </main>
             {% include "footer.html" %}
-            <style>
-            </style>
+
+            <!-- Carbon Tracker -->
+            <script src="/assets/js/carbonBadge.js" defer></script>
+            <!-- Copy Button for Code sections -->
+            <script src="/assets/js/copyButton.js" defer></script>
     </body>
 </html>
