--- a/src/tailwind/critical.scss
+++ b/src/tailwind/critical.scss
@@ -113,7 +113,7 @@ pre[class*="language-"] button  {
   }
 
   #wcb_a {
-    @apply bg-secondary link link-hover text-secondary-content px-1 md:px-6;
+    @apply bg-secondary link link-hover text-base-100 px-1 md:px-6;
   }
 
   #wcb_g {
