Fixed stying problem with badge.

--- a/src/tailwind/critical.scss
+++ b/src/tailwind/critical.scss
@@ -108,12 +108,12 @@ pre[class*="language-"] button  {
   @apply flex flex-col items-start sm:items-center;
 
   #wcb_p {
-    @apply border border-secondary bg-base-100 rounded;
+    @apply ring-1 ring-inset ring-secondary bg-base-100 rounded;
     @apply flex flex-row items-start justify-self-center;
   }
 
   #wcb_a {
-    @apply bg-secondary link link-hover text-base-100 px-1 md:px-6;
+    @apply bg-secondary rounded link link-hover text-base-100 px-1 md:px-6;
   }
 
   #wcb_g {
