Trying to find badge error.

--- a/src/site/_includes/footer.html
+++ b/src/site/_includes/footer.html
@@ -17,7 +17,7 @@
         </div>
 
         <!-- Carbon Tracker -->
-        <div id="wcb" class="carbonbadge wcb"></div>
+        <!-- <div id="wcb" class="carbonbadge wcb"></div> -->
         <div id="wcb" class="carbonbadge wcb-d"></div>
         <script src="https://unpkg.com/website-carbon-badges@1.1.3/b.min.js" defer></script>
     </footer>
