--- a/src/site/_layouts/base.html
+++ b/src/site/_layouts/base.html
@@ -13,7 +13,7 @@
             {% include "footer.html" %}
 
             <!-- Carbon Tracker -->
-            <script src="/assets/js/carbonBadge.js" defer></script>
+            <!-- <script src="/assets/js/carbonBadge.js" defer></script> -->
             <!-- Copy Button for Code sections -->
             <script src="/assets/js/copyButton.js" defer></script>
     </body>
