Reactivated kfu stuff and caching.

--- a/src/site/_layouts/home.html
+++ b/src/site/_layouts/home.html
@@ -55,12 +55,12 @@ layout: base.html
     <h2 id="my-teaching-focus">Current Teaching</h2>
     <p>Here's a glimps of the courses I am currently active in:</p>
     <div class="not-prose">
-    <!-- <iframe -->
-    <!--         class ="w-full h-96" -->
-    <!-- id="current-teaching" -->
-    <!-- title="Live view of courses Sarah is teaching now or the next term." -->
-    <!-- src="{{site.author.courses}}" -->
-    <!-- > -->
+    <iframe
+            class ="w-full h-96"
+    id="current-teaching"
+    title="Live view of courses Sarah is teaching now or the next term."
+    src="{{site.author.courses}}"
+    >
     </iframe>
     </div>
     <p>Check out the source of this embedded content at <a href="{{site.author.courses}}">Uni Graz Online</a> or have a look at the <a href="/teaching">full list of my courses</a>.</p>
